<?xml version="1.0" encoding="utf-8"?>
<com.edam.buttompanel.ButtomPanelInfo xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/light_black"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/version_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_update"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/update_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_update_info"
            android:textColor="@color/light_black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/fb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <com.edam.buttompanel.FbIcon
                android:id="@+id/fb_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/fb_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb_fans" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <com.edam.buttompanel.MailIcon
                android:id="@+id/mail_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_drama" />

            <TextView
                android:id="@+id/mail_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_question" />
        </LinearLayout>
    </LinearLayout>

</com.edam.buttompanel.ButtomPanelInfo>